cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 14)
project(atcoder)
add_subdirectory(abc007)
add_subdirectory(abc021)
add_subdirectory(abc045)
add_subdirectory(abc060)
add_subdirectory(abc062)
add_subdirectory(abc063)
add_subdirectory(abc064)
add_subdirectory(abc065)
add_subdirectory(abc066)
add_subdirectory(abc067)
add_subdirectory(abc068)
add_subdirectory(abc069)
add_subdirectory(abc070)
add_subdirectory(abc071)
add_subdirectory(abc072)
add_subdirectory(abc073)
add_subdirectory(abc074)
add_subdirectory(abc075)
add_subdirectory(abc076)
add_subdirectory(abc077)
add_subdirectory(abc078)
add_subdirectory(abc079)
add_subdirectory(abc080)
add_subdirectory(abc091)
add_subdirectory(abc099)
add_subdirectory(abc108)
add_subdirectory(abc109)
add_subdirectory(atc001)
add_executable(abc085c abc085c.cpp)
add_executable(abc088d abc088d.cpp)
add_executable(arc004a arc004a.cpp)
add_executable(arc031b arc031b.cpp)
add_executable(arc037b arc037b.cpp)
add_executable(tpdc_o_string tpdc_o_string.cpp)
