cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 14)
project(atcoder)
add_subdirectory(comp)
add_executable(abc085c abc085c.cpp)
add_executable(abc088d abc088d.cpp)
add_executable(arc004a arc004a.cpp)
add_executable(arc031b arc031b.cpp)
add_executable(arc037b arc037b.cpp)
add_executable(tpdc_o_string tpdc_o_string.cpp)
