cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 14)
project(comp)
add_executable(abc057a_20190701 abc057a_20190701.cpp)
add_executable(abc057b_20190701 abc057b_20190701.cpp)
add_executable(abc057c_20190701 abc057c_20190701.cpp)
add_executable(abc058a_20190701 abc058a_20190701.cpp)
add_executable(abc058b_20190701 abc058b_20190701.cpp)
add_executable(abc058c_20190701 abc058c_20190701.cpp)
add_executable(abc059a_20190630 abc059a_20190630.cpp)
add_executable(abc059b_20190630 abc059b_20190630.cpp)
add_executable(abc059c_20190630 abc059c_20190630.cpp)
add_executable(abc060b_20190701 abc060b_20190701.cpp)
add_executable(abc060c_20190630 abc060c_20190630.cpp)
add_executable(abc061a_20190630 abc061a_20190630.cpp)
add_executable(abc062b_20190630 abc062b_20190630.cpp)
add_executable(abc062c_20190630 abc062c_20190630.cpp)
