cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 14)
project(comp_aoj)
add_executable(alds1_1_a_20190707 alds1_1_a_20190707.cpp)
add_executable(alds1_1_d_20190707 alds1_1_d_20190707.cpp)
add_executable(alds1_2_a_20190707 alds1_2_a_20190707.cpp)
add_executable(alds1_2_b_20190707 alds1_2_b_20190707.cpp)
